--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lite ApkMod Jogos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h1>Lite ApkMod Jogos</h1>
+        <h1>Lite ApkMod Jogos <i class="fas fa-gamepad"></i></h1>
     </div>
 
     <div class="nav">
-        <a href="index.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="contato.html">Contato</a>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+        <a href="contato.html"><i class="fas fa-envelope"></i> Contato</a>
     </div>
 
     <div class="game-container" id="game-list">
@@ -22,12 +23,12 @@
     </div>
 
     <div class="sidebar">
-        <h3>Quem sou eu</h3>
+        <h3><i class="fas fa-user"></i> Quem sou eu</h3>
         <p>Gabe</p>
         <p>As mais lindas palavras de amor são ditas no silêncio de um olhar</p>
-        <h3>Sobre o Blog</h3>
+        <h3><i class="fas fa-book"></i> Sobre o Blog</h3>
         <p>Um espaço para jogos casuais e divertidos!</p>
-        <h3>Links Úteis</h3>
+        <h3><i class="fas fa-link"></i> Links Úteis</h3>
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -35,7 +36,7 @@
     </div>
 
     <div class="footer">
-        <p>(c) Lite ApkMod Jogos 2025</p>
+        <p>(c) Lite ApkMod Jogos 2025 <i class="fas fa-heart"></i></p>
     </div>
 
     <script src="script.js"></script>
