--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="sobre.html" class="nav-item"><i class="fas fa-info-circle"></i> Sobre</a>
             <a href="contato.html" class="nav-item"><i class="fas fa-envelope"></i> Contato</a>
         </nav>
+        <div class="hamburger">☰</div>
     </header>
 
     <main class="game-section">
@@ -32,6 +33,7 @@
             <p>Um espaço para jogos casuais e divertidos!</p>
             <h3><i class="fas fa-link"></i> Links Úteis</h3>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
