--- a/jogo-da-memoria/index.html
+++ b/jogo-da-memoria/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -78,6 +77,10 @@
         }
         .card:not(.flipped):not(.matched) {
             transform: rotateY(0deg);
+        }
+        .card.initial-show {
+            transform: rotateY(180deg);
+            background: #ccc;
         }
         .hamburger {
             position: fixed;
@@ -212,7 +215,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('startModal')">×</span>
             <h2>Jogo da Memória</h2>
-            <p>Encontre todos os pares!</p>
+            <p>Encontre todos os pares! As cartas serão mostradas por 3 segundos.</p>
             <button onclick="startGame()">Iniciar</button>
         </div>
     </div>
@@ -259,7 +262,7 @@
         }
 
         function startGame() {
-            // Fechar todos os modais
+            // Fechar todos os modals
             document.querySelectorAll('.modal').forEach(modal => modal.style.display = 'none');
             // Resetar estados
             grid.innerHTML = '';
@@ -284,6 +287,18 @@
                 grid.appendChild(card);
                 cards.push({ element: card, emoji: emoji, flipped: false, matched: false });
             });
+
+            // Mostrar todas as cartas por 3 segundos
+            cards.forEach(card => {
+                card.element.classList.add('initial-show');
+                card.element.textContent = card.emoji;
+            });
+            setTimeout(() => {
+                cards.forEach(card => {
+                    card.element.classList.remove('initial-show');
+                    card.element.textContent = '';
+                });
+            }, 3000); // 3 segundos
         }
 
         function flipCard() {
