--- a/jogo-da-memoria/index.html
+++ b/jogo-da-memoria/index.html
@@ -133,46 +133,67 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.7);
             z-index: 3000;
             justify-content: center;
             align-items: center;
         }
         .modal-content {
-            background: #fff;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             padding: 30px;
-            border-radius: 15px;
+            border-radius: 20px;
             max-width: 500px;
             width: 90%;
             text-align: center;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-            transform: scale(0.7);
-            animation: zoomIn 0.3s forwards;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+            transform: scale(0.5);
+            animation: popIn 0.5s ease-out forwards;
+            color: #fff;
         }
-        @keyframes zoomIn {
-            to { transform: scale(1); }
+        @keyframes popIn {
+            0% { transform: scale(0.5); opacity: 0; }
+            70% { transform: scale(1.05); opacity: 1; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+        .modal-content h2 {
+            font-size: 2em;
+            margin-bottom: 15px;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+        }
+        .modal-content p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
         }
         .modal-content button {
-            margin: 10px;
-            padding: 10px 20px;
+            padding: 12px 25px;
             border: none;
-            border-radius: 5px;
-            background: #6e8efb;
+            border-radius: 50px;
+            background: linear-gradient(135deg, #6e8efb, #a777e3);
             color: #fff;
             cursor: pointer;
-            transition: transform 0.2s, background 0.2s;
+            font-size: 1em;
+            font-weight: bold;
+            transition: transform 0.2s, box-shadow 0.2s;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
         .modal-content button:hover {
-            transform: scale(1.05);
-            background: #a777e3;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
         }
         .close {
             position: absolute;
             top: 15px;
             right: 20px;
-            font-size: 25px;
+            font-size: 30px;
             cursor: pointer;
-            color: #333;
+            color: #fff;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s;
+        }
+        .close:hover {
+            transform: rotate(90deg);
         }
         #moves {
             margin: 20px 0;
@@ -197,6 +218,19 @@
             }
             .container {
                 padding: 15px;
+            }
+            .modal-content {
+                padding: 20px;
+            }
+            .modal-content h2 {
+                font-size: 1.5em;
+            }
+            .modal-content p {
+                font-size: 1em;
+            }
+            .modal-content button {
+                padding: 10px 20px;
+                font-size: 0.9em;
             }
         }
     </style>
