--- a/caca-palavras/index.html
+++ b/caca-palavras/index.html
@@ -46,14 +46,14 @@
             display: grid;
             grid-template-columns: repeat(10, 40px);
             gap: 1px;
-            background: transparent; /* Removido background preto */
+            background: transparent; /* Garantir que o fundo do grid não interfira */
             margin: 20px auto;
             width: 400px; /* 10x40px + 9x1px */
         }
         .cell {
             width: 40px;
             height: 40px;
-            background: #fff; /* Fundo branco no tema claro */
+            background: #fff; /* Fundo branco por padrão (tema claro) */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -62,11 +62,12 @@
             border: 1px solid #ccc;
             cursor: pointer;
             user-select: none;
-            color: #000; /* Letras pretas no tema claro */
+            color: #000; /* Letras pretas por padrão (tema claro) */
+            transition: background 0.3s, color 0.3s; /* Transição suave para mudanças de tema */
         }
-        .cell.dark-theme {
+        .dark-theme .cell {
+            background: #333; /* Fundo escuro no tema escuro */
             color: #fff; /* Letras brancas no tema escuro */
-            background: #333; /* Fundo escuro para contraste */
         }
         .cell.selected {
             background: #a777e3;
@@ -680,20 +681,36 @@
             return str.normalize('NFD').replace(/[\u0300-\u036f]/g, '');
         }
 
-        // Detectar tema e aplicar às letras do tabuleiro
+        // Detectar tema e aplicar ao tabuleiro
         function updateTheme() {
             const isDarkTheme = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const container = document.querySelector('.container');
             const cells = document.querySelectorAll('.cell');
+
+            // Aplicar a classe dark-theme ao container
+            if (isDarkTheme) {
+                container.classList.add('dark-theme');
+            } else {
+                container.classList.remove('dark-theme');
+            }
+
+            // Garantir que as células tenham os estilos corretos
             cells.forEach(cell => {
                 if (isDarkTheme) {
-                    cell.classList.add('dark-theme');
+                    cell.style.background = '#333';
+                    cell.style.color = '#fff';
                 } else {
-                    cell.classList.remove('dark-theme');
+                    cell.style.background = '#fff';
+                    cell.style.color = '#000';
                 }
+                cell.style.opacity = '1'; // Garantir visibilidade
             });
-            // Forçar atualização do estilo para garantir visibilidade
-            cells.forEach(cell => cell.style.opacity = '1');
         }
+
+        // Forçar a aplicação do tema ao carregar a página
+        window.addEventListener('load', () => {
+            updateTheme();
+        });
 
         // Inicializar modal de início
         document.getElementById('startModal').style.display = 'flex';
@@ -709,7 +726,9 @@
         });
 
         // Monitorar mudanças no tema
-        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
+            updateTheme();
+        });
 
         function openModal(modalId) {
             document.getElementById(modalId).style.display = 'flex';
