--- a/contato.html
+++ b/contato.html
@@ -4,49 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Lite ApkMod Jogos</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
-    <header class="header">
-        <h1>Lite ApkMod Jogos <i class="fas fa-gamepad"></i></h1>
-        <nav class="nav">
-            <a href="index.html" class="nav-item"><i class="fas fa-home"></i> Home</a>
-            <a href="sobre.html" class="nav-item"><i class="fas fa-info-circle"></i> Sobre</a>
-            <a href="contato.html" class="nav-item"><i class="fas fa-envelope"></i> Contato</a>
-        </nav>
-        <div class="hamburger">☰</div>
-    </header>
+    <div class="hamburger" onclick="toggleSidebar()">
+        <i class="fas fa-bars"></i>
+    </div>
 
-    <main class="game-section">
-        <div class="game-grid">
-            <div class="game-card">
-                <h2>Contato</h2>
-                <p>Entre em contato conosco por e-mail: <a href="mailto:example@email.com">example@email.com</a></p>
+    <div class="sidebar" id="sidebar">
+        <div class="sidebar-header">
+            Lite ApkMod Jogos <i class="fas fa-gamepad"></i>
+        </div>
+        <a href="index.html"><i class="fas fa-home"></i> Início</a>
+        <a onclick="openModal('gameListModal')"><i class="fas fa-list-ul"></i> Lista de Jogos</a>
+        <a href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+        <a href="contato.html" class="active"><i class="fas fa-envelope"></i> Contato</a> <div class="sidebar-footer">
+            <p>&copy; Lite ApkMod Jogos <span id="currentYear"></span></p>
+        </div>
+    </div>
+
+    <div class="container" id="mainContainer">
+        <h1 id="pageTitle"><i class="fas fa-envelope-open-text"></i> Entre em Contato</h1>
+        <p id="pageSubtitle">Adoraríamos ouvir de você! Envie suas dúvidas, sugestões ou apenas diga olá.</p>
+        
+        <div class="contact-content">
+            <p>Você pode nos contatar através do seguinte endereço de e-mail:</p>
+            <p class="email-address">
+                <a href="mailto:example@email.com">example@email.com</a>
+            </p>
+            <p>Ou siga-nos nas redes sociais (links de exemplo):</p>
+            <div class="social-links">
+                <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon" aria-label="Discord"><i class="fab fa-discord"></i></a>
             </div>
         </div>
-    </main>
+         <button class="action-button" onclick="window.location.href='index.html'">
+            <i class="fas fa-arrow-left"></i> Voltar para Início
+        </button>
+    </div>
 
-    <aside class="sidebar">
-        <div class="sidebar-content">
-            <h3><i class="fas fa-user"></i> Quem sou eu</h3>
-            <p>Gabe</p>
-            <p>As mais lindas palavras de amor são ditas no silêncio de um olhar</p>
-            <h3><i class="fas fa-book"></i> Sobre o Blog</h3>
-            <p>Um espaço para jogos casuais e divertidos!</p>
-            <h3><i class="fas fa-link"></i> Links Úteis</h3>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
+    <div class="modal" id="gameListModal">
+        <div class="modal-content">
+            <button class="close-modal-btn" onclick="closeModal('gameListModal')">&times;</button>
+            <h2><i class="fas fa-dice-d6"></i> Lista de Jogos</h2>
+            <div id="game-list-container">
+                </div>
+            <button class="action-button secondary" style="margin-top: 20px;" onclick="closeModal('gameListModal')">
+                <i class="fas fa-times-circle"></i> Fechar
+            </button>
         </div>
-    </aside>
+    </div>
 
-    <footer class="footer">
-        <p>(c) Lite ApkMod Jogos 2025 <i class="fas fa-heart"></i></p>
-    </footer>
+    <!-- Outros modais (gameSettingsModal, genericEndGameModal) podem ser incluídos se necessário,
+         mas para a página de contato, geralmente apenas o gameListModal é relevante se você quiser
+         manter a navegação consistente. -->
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
+
