--- a/Jogos/quebra-cabeca-t/index.html
+++ b/Jogos/quebra-cabeca-t/index.html
@@ -54,6 +54,7 @@
         <h1>Quebra-Cabeça de Imagem</h1>
         <div id="moves">Jogadas: 0</div>
         <div id="grid" class="grid"></div>
+        <div id="piece-bank" class="piece-bank"></div>
     </div>
     <div class="modal" id="startModal">
         <div class="modal-content">
