--- a/index.html
+++ b/index.html
@@ -3,72 +3,204 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lite ApkMod Jogos</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>GameHub - Portal de Jogos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hamburger" onclick="toggleSidebar()">
-        <i class="fas fa-bars"></i>
-    </div>
-
-    <div class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            Lite ApkMod Jogos <i class="fas fa-gamepad"></i>
-        </div>
-        <a onclick="showWelcomeScreen()"><i class="fas fa-home"></i> Início</a>
-        <a onclick="openModal('gameListModal')"><i class="fas fa-list-ul"></i> Lista de Jogos</a>
-        <a href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
-        <a href="contato.html"><i class="fas fa-envelope"></i> Contato</a>
-        <div class="sidebar-footer">
-            <p>&copy; Lite ApkMod Jogos <span id="currentYear"></span></p>
-        </div>
-    </div>
-
-    <div class="container" id="mainContainer">
-        <h1 id="pageTitle">Lite ApkMod Jogos <i class="fas fa-gamepad"></i></h1>
-        <p id="pageSubtitle">Seu portal de jogos casuais e divertidos!</p>
-        <button class="action-button" onclick="openModal('gameListModal')">
-            <i class="fas fa-play-circle"></i> Ver Lista de Jogos
-        </button>
-        </div>
-
-    <div class="modal" id="gameListModal">
-        <div class="modal-content">
-            <button class="close-modal-btn" onclick="closeModal('gameListModal')">&times;</button>
-            <h2><i class="fas fa-dice-d6"></i> Lista de Jogos</h2>
-            <div id="game-list-container">
-                </div>
-            <button class="action-button secondary" style="margin-top: 20px;" onclick="closeModal('gameListModal')">
-                <i class="fas fa-times-circle"></i> Fechar
-            </button>
-        </div>
-    </div>
-
-    <div class="modal" id="gameSettingsModal">
-        <div class="modal-content">
-            <button class="close-modal-btn" onclick="closeSettingsModal()">&times;</button>
-            <h2 id="settingsModalTitle">Configurações do Jogo</h2>
-            <div id="settingsModalContent">
-                <p>Opções de jogo aparecerão aqui.</p>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-container">
+            <div class="logo">
+                <i class="fas fa-gamepad"></i>
+                <span>GameHub</span>
             </div>
-            <button class="action-button secondary" style="margin-top: 15px;" onclick="closeSettingsModal()">
-                <i class="fas fa-times-circle"></i> Cancelar
-            </button>
+            <nav class="nav">
+                <a href="#home" class="nav-link active" data-section="home">
+                    <i class="fas fa-home"></i> Início
+                </a>
+                <a href="#games" class="nav-link" data-section="games">
+                    <i class="fas fa-dice-d6"></i> Jogos
+                </a>
+                <a href="sobre.html" class="nav-link">
+                    <i class="fas fa-info-circle"></i> Sobre
+                </a>
+                <a href="contato.html" class="nav-link">
+                    <i class="fas fa-envelope"></i> Contato
+                </a>
+            </nav>
+            <div class="mobile-menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+    </header>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <a href="#home" class="mobile-nav-link" data-section="home">
+            <i class="fas fa-home"></i> Início
+        </a>
+        <a href="#games" class="mobile-nav-link" data-section="games">
+            <i class="fas fa-dice-d6"></i> Jogos
+        </a>
+        <a href="sobre.html" class="mobile-nav-link">
+            <i class="fas fa-info-circle"></i> Sobre
+        </a>
+        <a href="contato.html" class="mobile-nav-link">
+            <i class="fas fa-envelope"></i> Contato
+        </a>
+    </div>
+
+    <!-- Main Content -->
+    <main class="main">
+        <!-- Home Section -->
+        <section id="home" class="section active">
+            <div class="hero">
+                <div class="hero-content">
+                    <h1 class="hero-title">
+                        Bem-vindo ao <span class="gradient-text">GameHub</span>
+                    </h1>
+                    <p class="hero-subtitle">
+                        Descubra uma coleção incrível de jogos clássicos e modernos, 
+                        todos em um só lugar. Diversão garantida para todas as idades!
+                    </p>
+                    <div class="hero-buttons">
+                        <button class="btn btn-primary" onclick="showSection('games')">
+                            <i class="fas fa-play"></i> Explorar Jogos
+                        </button>
+                        <button class="btn btn-secondary" onclick="scrollToStats()">
+                            <i class="fas fa-chart-bar"></i> Estatísticas
+                        </button>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <div class="floating-icons">
+                        <i class="fas fa-gamepad icon-float"></i>
+                        <i class="fas fa-dice-d6 icon-float"></i>
+                        <i class="fas fa-trophy icon-float"></i>
+                        <i class="fas fa-star icon-float"></i>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Stats Section -->
+            <div class="stats-section" id="stats">
+                <div class="container">
+                    <h2 class="section-title">Estatísticas do Portal</h2>
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-gamepad"></i>
+                            </div>
+                            <div class="stat-number" id="total-games">23</div>
+                            <div class="stat-label">Jogos Disponíveis</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-layer-group"></i>
+                            </div>
+                            <div class="stat-number">6</div>
+                            <div class="stat-label">Categorias</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-clock"></i>
+                            </div>
+                            <div class="stat-number">24/7</div>
+                            <div class="stat-label">Disponível</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-mobile-alt"></i>
+                            </div>
+                            <div class="stat-number">100%</div>
+                            <div class="stat-label">Responsivo</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Games Section -->
+        <section id="games" class="section">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Biblioteca de Jogos</h2>
+                    <p class="section-subtitle">Escolha sua categoria favorita e comece a jogar!</p>
+                </div>
+
+                <!-- Category Filter -->
+                <div class="category-filter">
+                    <button class="filter-btn active" data-category="all">
+                        <i class="fas fa-th"></i> Todos
+                    </button>
+                    <button class="filter-btn" data-category="puzzle">
+                        <i class="fas fa-puzzle-piece"></i> Puzzle
+                    </button>
+                    <button class="filter-btn" data-category="arcade">
+                        <i class="fas fa-rocket"></i> Arcade
+                    </button>
+                    <button class="filter-btn" data-category="strategy">
+                        <i class="fas fa-chess"></i> Estratégia
+                    </button>
+                    <button class="filter-btn" data-category="classic">
+                        <i class="fas fa-crown"></i> Clássicos
+                    </button>
+                    <button class="filter-btn" data-category="action">
+                        <i class="fas fa-fist-raised"></i> Ação
+                    </button>
+                </div>
+
+                <!-- Games Grid -->
+                <div class="games-grid" id="games-grid">
+                    <!-- Games will be populated by JavaScript -->
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Game Modal -->
+    <div class="modal" id="gameModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modalGameTitle">Título do Jogo</h3>
+                <button class="modal-close" onclick="closeGameModal()">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="game-info">
+                    <div class="game-description" id="modalGameDescription">
+                        Descrição do jogo aparecerá aqui.
+                    </div>
+                    <div class="game-details">
+                        <div class="detail-item">
+                            <i class="fas fa-tag"></i>
+                            <span>Categoria: <span id="modalGameCategory">-</span></span>
+                        </div>
+                        <div class="detail-item">
+                            <i class="fas fa-star"></i>
+                            <span>Dificuldade: <span id="modalGameDifficulty">-</span></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" onclick="closeGameModal()">
+                    <i class="fas fa-times"></i> Cancelar
+                </button>
+                <button class="btn btn-primary" id="playGameBtn">
+                    <i class="fas fa-play"></i> Jogar Agora
+                </button>
+            </div>
         </div>
     </div>
 
-    <div class="modal" id="genericEndGameModal">
-        <div class="modal-content">
-            <button class="close-modal-btn" onclick="closeModal('genericEndGameModal'); showWelcomeScreen();">&times;</button>
-            <h2 id="endGameModalTitle">Fim de Jogo!</h2>
-            <p id="endGameModalMessage">Resultado do jogo aqui.</p>
-            <button class="action-button" onclick="closeModal('genericEndGameModal'); openModal('gameListModal');">
-                <i class="fas fa-list-ul"></i> Ver Lista de Jogos
-            </button>
-            <button id="restartCurrentGameBtn" class="action-button secondary" style="display:none;">
-                <i class="fas fa-redo"></i> Jogar Novamente
-            </button>
+    <!-- Loading Overlay -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-spinner">
+            <i class="fas fa-gamepad"></i>
+            <p>Carregando jogo...</p>
         </div>
     </div>
 
